## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2002 James Su
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

MAINTAINERCLEANFILES	= Makefile.in

INST_ICONS		= table.png	\
			  Amharic.png   \
			  Arabic.png    \
			  Array30.png   \
			  Bengali-inscript.png	\
			  Bengali-probhat.png	\
			  CangJie.png	\
			  CangJie3.png	\
			  Cantonese.png \
			  CantonHK.png	\
			  CNS11643.png	\
			  Dayi.png      \
			  Erbi.png      \
			  Erbi-QS.png   \
			  EZ.png        \
			  Gujarati-inscript.png	\
			  Gujarati-phonetic.png	\
			  Hangul.png    \
			  Hanja.png     \
			  Hindi-inscript.png	\
			  Hindi-phonetic.png	\
			  Hindi-remington.png   \
			  HIRAGANA.png  \
			  IPA-X-SAMPA.png  \
			  Jyutping.png  \
			  KATAKANA.png  \
			  Kannada-inscript.png	\
			  Kannada-kgp.png	\
			  LaTeX.png     \
			  Malayalam-inscript.png	\
			  Malayalam-phonetic.png	\
			  Marathi-remington.png   \
			  Nepali.png    \
			  Nippon.png    \
			  Punjabi-inscript.png	\
			  Punjabi-jhelum.png	\
			  Punjabi-phonetic.png	\
			  Punjabi-remington.png \
			  Quick.png	\
			  RussianTraditional.png        \
			  Simplex.png   \
			  SmartCangJie6.png    \
			  Stroke5.png	\
			  Tamil-inscript.png	\
			  Tamil-phonetic.png	\
			  Tamil-remington.png   \
			  Telugu-inscript.png	\
			  Tamil-tamil99.png   \
			  Thai.png	\
			  Translit.png	\
			  Ukrainian-Translit.png	\
			  Uyghur.png	\
			  Viqr.png      \
			  Wu.png        \
			  Wubi.png      \
			  Yawerty.png   \
			  ZhuYin.png    \
			  Ziranma.png

EXTRA_DIST		= $(INST_ICONS)

icondir			= $(SCIM_ICONDIR)
icon_DATA		= $(INST_ICONS)

